<resources>

    <string name="start_text">Для продолжения, Вам необходимо авторизоваться по номеру телефона</string>
    <string name="edit_name">Введите имя</string>
    <string name="edit_phone">Введите телефон</string>
    <string name="edit_sms">Код из смс</string>
    <string name="btn_get_sms">Получить смс</string>
    <string name="btn_check_sms">Продолжить</string>
    <string name="error_sms">Неверный код</string>
    <string name="btn_back">Вернуться назад</string>

    <string name="app_name">Classic Slots</string>
    <string name="music">Музыка</string>
    <string name="sounds">Звуки</string>
    <string name="combinations">Комбинации</string>

    <string-array name="countries">
        <item>ru +7</item>
        <item>ua +380</item>
        <item>kz +7</item>
    </string-array>
</resources>