<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:background="#00000000"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_above="@+id/mcv_combinations"
    android:layout_height="100dp">
    <ImageView
        android:layout_width="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:id="@+id/iv_close"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_close_24"
        />

</RelativeLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_centerInParent="true"

        android:id="@+id/mcv_combinations"

        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
android:background="@drawable/third_button_background"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/cl_combinations"
                android:layout_height="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                android:textColor="#000000"
android:layout_centerHorizontal="true"
                android:id="@+id/tv_music"
                android:textSize="25dp"
                />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
android:checked="true"
            app:layout_constraintStart_toEndOf="@+id/tv_music"
           android:layout_toEndOf="@+id/tv_music"

            android:theme="@style/SCBSwitch"

            android:id="@+id/sw_music"
            />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sounds"
                  app:layout_constraintTop_toBottomOf="@+id/tv_music"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="@+id/tv_music"

                    android:id="@+id/tv_sounds"
                    android:textSize="25dp"
                    />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
android:checked="true"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/sw_music"
            app:layout_constraintStart_toStartOf="@+id/sw_music"
            android:textSize="25sp"
            android:textColor="#ff758c"
            android:theme="@style/SCBSwitch"

            android:id="@+id/sw_sounds"
            />
            </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/cl_combinations"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:strokeWidth="2dp"
            app:strokeColor="#50c9c3"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:layout_height="200dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:id="@+id/ll_combinations"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="#ff758c"
        android:layout_height="wrap_content"
        android:text="@string/combinations"

        />

</LinearLayout>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"

                    app:cardBackgroundColor="#a3bded"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/mcv_seven"
android:layout_below="@+id/ll_combinations"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m11"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m11"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m11"
                            />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X10"
                        android:textColor="#ff758c"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="15sp"
                        />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="#a3bded"
                    app:cardCornerRadius="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/mcv_m122"
                    android:layout_below="@+id/mcv_seven"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m122"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m122"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m122"
                            />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X8"
                        android:textColor="#ff758c"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="end"

                        android:gravity="end"
                        android:textSize="15sp"
                        />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/mcv_m133"
                    app:cardBackgroundColor="#a3bded"
                    android:layout_below="@+id/mcv_m122"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m133"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m133"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m133"
                            />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X6"
                        android:textColor="#ff758c"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="15sp"
                        />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/mcv_m144"
                    app:cardBackgroundColor="#a3bded"
                    android:layout_below="@+id/mcv_m133"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m144"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m144"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m144"
                            />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X4"
                        android:textColor="#ff758c"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="15sp"
                        />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/mcv_m155"
                    android:layout_below="@+id/mcv_m144"
                    app:cardBackgroundColor="#a3bded"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m155"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m155"
                            />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@mipmap/m155"
                            />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X2"
                        android:textColor="#ff758c"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="15sp"
                        />
                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>
